# aws-python

./: .editorconfig  .envrc  .gitignore  readme.rst
modlue_06/lab6/: README.md  app.py  httpd.bash
modlue_06/lab6/lab6/: lab6_stack.py
modlue_06/lab6/tests/unit/: test_lab6_stack.py
module_01/area-calc/: pyproject.toml  readme.rst
module_01/area-calc/src/area_calc/: calc.py  console.py
module_01/area-calc/tests/: test_calc.py  test_console.py  test_pytest.py
module_02/csv-merge/: pyproject.toml  readme.rst
module_02/csv-merge/src/csv_merge/: console.py  merge.py
module_02/csv-merge/tests/: sample_data.py  test_merge.py
module_02/homework/: age_calc.py  algebra.py  readfile.py
module_03/homework/: echo_number.py
module_03/web-scraping/: pyproject.toml  readme.rst
module_03/web-scraping/src/web_scraping/: scrape.py
module_03/web-scraping/tests/: test_scrape.py
module_04/homework/: functions.py
module_05/add-to-checkmk/: pyproject.toml  readme.rst
module_05/add-to-checkmk/data/: event.json
module_05/add-to-checkmk/src/add_to_checkmk/: lambda.py
module_05/add-to-checkmk/tests/: test_lambda.py
module_05/homework/: hw.py
module_07/homework/: new_instance_boto.py
module_07/homework/inst-sg-management/: problem.rst  pyproject.toml  readme.rst
module_07/homework/inst-sg-management/src/inst_sg_management/: console.py  functions.py
module_07/homework/inst-sg-management/tests/: test_functions.py
