[tool.poetry]
name = "add-to-checkmk"
version = "0.1.0"
description = "Lambda function that will add instances to checkmk dynamically."
authors = ["Chris King-Parra <chris@kingparra.work>"]
readme = "readme.rst"
packages = [{include = "add_to_checkmk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
boto3 = {extras = ["crt"], version = "^1.34.48"}
lenses = "^1.2.0"


[tool.poetry.group.dev.dependencies]
xonsh = {extras = ["full"], version = "^0.14.4"}
pygments = "^2.17.2"
prompt-toolkit = "^3.0.43"
setproctitle = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
